blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/Advice_Case__c.object-meta.xml
<CustomObject>
    <description>One piece of advice work for a household, from fact find to recommendation to products placed. This is the delivery of advice and stays apart from the deal that won the client.</description>
    <label>Advice case</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advice cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>