blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Advice_topic__c.field-meta.xml
<CustomField>
    <fullName>Advice_topic__c</fullName>
    <description>The area of advice. Used to route work and report volumes.</description>
    <label>Advice topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Protection</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Inheritance</fullName>
            </value>
            <value>
                <fullName>General planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>