blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Adviser__c.field-meta.xml
<CustomField>
    <fullName>Adviser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The adviser accountable for the recommendation.</description>
    <label>Adviser</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Advice cases Adviser</relationshipLabel>
    <relationshipName>Advice_Case_Adviser</relationshipName>
    <type>Lookup</type>
</CustomField>