blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Applications_submitted__c.field-meta.xml
<CustomField>
    <fullName>Applications_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applications to the product providers or platforms have been sent.</description>
    <label>Applications submitted</label>
    <type>Checkbox</type>
</CustomField>