blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Client_decision__c.field-meta.xml
<CustomField>
    <fullName>Client_decision__c</fullName>
    <description>What the client decided after the recommendation. Reported to see how often advice is followed.</description>
    <label>Client decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Partly accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>