blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Closure_reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_reason__c</fullName>
    <description>Why the case closed without completing. Required on the closed-without-advice stage.</description>
    <label>Closure reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client withdrew</fullName>
            </value>
            <value>
                <fullName>Advice declined</fullName>
            </value>
            <value>
                <fullName>Unable to advise</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Circumstances changed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>