blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Completion_date__c.field-meta.xml
<CustomField>
    <fullName>Completion_date__c</fullName>
    <description>Date all agreed actions were completed.</description>
    <label>Completion date</label>
    <type>Date</type>
</CustomField>