blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Compliance_check__c.field-meta.xml
<CustomField>
    <fullName>Compliance_check__c</fullName>
    <description>Progress of the internal check of the advice before it goes to the client.</description>
    <label>Compliance check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Rework needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>