blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Fact_find_complete__c.field-meta.xml
<CustomField>
    <fullName>Fact_find_complete__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>DATA PROTECTION: personal financial data. The client's circumstances, goals and documents have been gathered and checked. The detail is held in the planning system.</description>
    <label>Fact find complete</label>
    <type>Checkbox</type>
</CustomField>