blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the full history of advice for a household.</description>
    <label>Household</label>
    <referenceTo>Client_Household__c</referenceTo>
    <relationshipLabel>Advice cases</relationshipLabel>
    <relationshipName>Advice_cases</relationshipName>
    <type>Lookup</type>
</CustomField>