blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Paraplanner__c.field-meta.xml
<CustomField>
    <fullName>Paraplanner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member who researches and drafts the report.</description>
    <label>Paraplanner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Advice cases Paraplanner</relationshipLabel>
    <relationshipName>Advice_Case_Paraplanner</relationshipName>
    <type>Lookup</type>
</CustomField>