blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Report_issued_date__c.field-meta.xml
<CustomField>
    <fullName>Report_issued_date__c</fullName>
    <description>Date the written recommendation was sent to the client.</description>
    <label>Report issued date</label>
    <type>Date</type>
</CustomField>