blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Where the record is in its pipeline. Restricted to the pipeline's stages.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fact find</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Report drafted</fullName>
            </value>
            <value>
                <fullName>Report issued</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed without advice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>