blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/fields/Won_deal__c.field-meta.xml
<CustomField>
    <fullName>Won_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the first advice case to the deal that created it.</description>
    <label>Won deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Advice cases</relationshipLabel>
    <relationshipName>Advice_cases</relationshipName>
    <type>Lookup</type>
</CustomField>