blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/validationRules/Gate_advice_delivery_analysis.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_advice_delivery_analysis</fullName>
    <active>true</active>
    <description>Stage gate: Advice delivery, Analysis and later stages need Fact find complete and Paraplanner.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Fact find", 1, "Analysis", 2, "Report drafted", 3, "Report issued", 4, "Accepted", 5, "Completed", 6, 0) &gt;= 2, OR(NOT(Fact_find_complete__c), ISBLANK(Paraplanner__c)))</errorConditionFormula>
    <errorMessage>Fill in Fact find complete and Paraplanner before moving to Analysis.</errorMessage>
</ValidationRule>