blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/validationRules/Gate_advice_delivery_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_advice_delivery_completed</fullName>
    <active>true</active>
    <description>Stage gate: Advice delivery, Completed and later stages need Applications submitted and Completion date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Fact find", 1, "Analysis", 2, "Report drafted", 3, "Report issued", 4, "Accepted", 5, "Completed", 6, 0) &gt;= 6, OR(NOT(Applications_submitted__c), ISBLANK(Completion_date__c)))</errorConditionFormula>
    <errorMessage>Fill in Applications submitted and Completion date before moving to Completed.</errorMessage>
</ValidationRule>