blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/validationRules/Gate_advice_delivery_fact_find.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_advice_delivery_fact_find</fullName>
    <active>true</active>
    <description>Stage gate: Advice delivery, Fact find and later stages need Adviser and Advice topic.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Fact find", 1, "Analysis", 2, "Report drafted", 3, "Report issued", 4, "Accepted", 5, "Completed", 6, 0) &gt;= 1, OR(ISBLANK(Adviser__c), ISBLANK(TEXT(Advice_topic__c))))</errorConditionFormula>
    <errorMessage>Fill in Adviser and Advice topic before moving to Fact find.</errorMessage>
</ValidationRule>