blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/validationRules/Gate_advice_delivery_report_issued.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_advice_delivery_report_issued</fullName>
    <active>true</active>
    <description>Stage gate: Advice delivery, Report issued and later stages need Report issued date and Compliance check.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Fact find", 1, "Analysis", 2, "Report drafted", 3, "Report issued", 4, "Accepted", 5, "Completed", 6, 0) &gt;= 4, OR(ISBLANK(Report_issued_date__c), ISBLANK(TEXT(Compliance_check__c))))</errorConditionFormula>
    <errorMessage>Fill in Report issued date and Compliance check before moving to Report issued.</errorMessage>
</ValidationRule>