blueprints/financial-advisers/salesforce/force-app/main/default/objects/Advice_Case__c/validationRules/Lost_advice_delivery_closed_witho_8a963f.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_advice_delivery_closed_witho_8a963f</fullName>
    <active>true</active>
    <description>Lost reason: Advice delivery, Closed without advice needs Closure reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Closed without advice"), ISBLANK(TEXT(Closure_reason__c)))</errorConditionFormula>
    <errorDisplayField>Closure_reason__c</errorDisplayField>
    <errorMessage>Fill in Closure reason before closing this as Closed without advice.</errorMessage>
</ValidationRule>